--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,6 +1,14 @@
 section#footer {
+	background: linear-gradient(to right, lightblue, #007eff);
 	width: 100%;
 	height: 60px;
+	border-top: 2px solid black;
+	border-bottom: 2px solid black;
+	color: black;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
 	position: absolute;
 	bottom: 0;
 }
