--- a/public/css/polls.css
+++ b/public/css/polls.css
@@ -1,7 +1,5 @@
 section#polls-page {
 	padding-top: 25px;
-	margin-bottom: 200px;
-	min-height: 800px;
 }
 
 .poll-lead {
